# FabariaGest

./: CHANGELOG  CMakeLists.txt  README  README.md  ROADMAP  build_mingw32  build_mingw64  build_osx  fabariagest.kdev4  install_manifest.txt  modifiche.txt  translate_lrelease.sh  translate_lupdate.sh
JsBarcode/: .directory
JsBarcode/src/: .directory
analogclock/: CMakeLists.txt  analogclock.cpp  analogclock.h
backup_restore_db/: CMakeLists.txt  db_bk_rs.cpp  db_bk_rs.h  db_bk_rs.ui  dbbkrs_plugin.cpp  dbbkrs_plugin.h
backup_restore_db/images/: .directory
check_database/: CMakeLists.txt  check_database.cpp  check_database.h  check_database.ui  checkdatabase_plugin.cpp  checkdatabase_plugin.h  main.cpp
cmake/modules/: DetectMachine.cmake  FindJANSSON.cmake  FindLSB.cmake  FindNSS.cmake
debian/: .directory  README  changelog  control  dirs  fabariagest.install  postinst  rules
fabaria/: .directory  CMakeLists.txt  Debug.cpp  Debug.h  DropboxFabaria.cpp  DropboxFabaria.h  IconFileProvider.cpp  IconFileProvider.h  LineEdit.cpp  LineEdit.h  LineEditDelegate.cpp  LineEditDelegate.h  ListBox.cpp  ListBox.h  about.cpp  about.h  agenti.cpp  agenti.h  articoli.cpp  articoli.h  azienda.cpp  azienda.h  banche.cpp  banche.h  barcode.cpp  barcode.h  button.cpp  button.h  carico_mag.cpp  carico_mag.h  categoria.cpp  categoria.h  causali.cpp  causali.h  chiudi_anno_contabile.cpp  chiudi_anno_contabile.h  classe.cpp  classe.h  cod_fisc.cpp  cod_fisc.h  (+135 more)
fabaria/desktop/: fabaria.desktop  utility.desktop
fabaria/images/: .directory  CHANGELOG  logo4.icns  sito.html
fabaria/images/mimetype/: .directory
fabaria/images/mini_tutorial/: .directory
fabaria/installdb/: .directory  install_db.sql
fabaria/language/: English.ts  Italian.ts
fabaria/qml/: splash.qml
fabaria/qss/: moderno.qss
fabaria/stampa/: agenti.html  articoli.html  banche.html  carico_mag.html
fabaria/ui/: .directory  DropboxFabaria.ui  about.ui  agenti.ui  articoli.ui  azienda.ui  banche.ui  barcode.ui  carico_mag.ui  categoria.ui  causali.ui  chiudi_anno_contabile.ui  cod_fisc.ui  comuni.ui  ddt.ui  ddt_righe.ui  ddt_righe_art.ui  dialog_fattura.ui  dialog_fattura_acq.ui  distinta_riba.ui  email_send.ui  esci.ui  esistenza_all.ui  esistenza_articoli.ui  f_rest.ui  fatt_acq.ui  fatt_acq_art.ui  fatt_new.ui  fattura.ui  fattura_elettronica.ui  fattura_rg.ui  fattura_rg_art.ui  fornitori.ui  imposta_anno.ui  inputdialogcombo.ui  iva.ui  lista_invio_mail.ui  listaemail.ui  listino.ui  magazzino.ui  (+18 more)
initdb/: CMakeLists.txt  connessione.cpp  connessione.h  connessione.ui  images.qrc  settingsmanager.cpp  update_db.cpp  update_db.ui
initdb/images/: .directory
initdb/installdb/: install_db.sql
initdb/updatedb/: update_db.sql
inventario/: CMakeLists.txt  export_inv.cpp  export_inv.h  inventario.cpp  inventario.h  inventario_plugin.cpp  inventario_plugin.h
log_man/: CMakeLists.txt  license.cpp  license.h  license.ui
qtdropbox/: CMakeLists.txt
qtdropbox/dropbox/endpoint/: ApiUtil.h  DropboxAuthInfo.h
quazip/: CMakeLists.txt  zip.c
qwt/: CMakeLists.txt  qwt_date.cpp  qwt_plot_rasteritem.cpp  qwt_plot_renderer.cpp  qwt_plot_spectrogram.cpp  qwt_point_mapper.cpp
smtp/: CMakeLists.txt  mimemessage.cpp  mimemessage.h  mimepart.cpp  smtpclient.cpp  smtpclient.h  smtpexports.h
test/: decompress.cpp  decompress.h  main.cpp  test.pro
update/: CMakeLists.txt  main.cpp  settingsmanager.cpp  update.cpp  update.ui
update/images/: .directory
utility/: CMakeLists.txt  db_bk_rs.cpp  db_bk_rs.h  db_bk_rs.ui  main.cpp
xlsx/: .directory  CMakeLists.txt
